--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Макс — Репетитор по математике</title>
+  <title>Тимур — Репетитор по математике</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Rubik:wght@600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -41,8 +41,8 @@
       z-index: 5;
     }
     .intro img {
-      width: 200px;
-      height: 260px;
+      width: 300px;
+      height: 320px;
       border-radius: 24px;
       object-fit: cover;
       margin: 20px;
@@ -113,7 +113,6 @@
       padding: 14px 28px;
       border-radius: 8px;
       font-size: 18px;
-      transition: background 0.3s;
       display: inline-block;
       margin-top: 10px;
     }
@@ -124,50 +123,55 @@
 </head>
 <body>
   <section class="intro">
-    <img src="https://postimg.cc/rDGwLbmG" alt="Макс">
+    <img src="https://i.postimg.cc/BnkL2ffz/my-photo.jpg" alt="Тимур">
     <div class="intro-text">
-      <h1>Привет! Я Макс</h1>
-      <p>Я ученик 9 класса и репетитор по математике для 4–7 классов. Объясняю просто, с примерами, и делаю уроки интересными!</p>
+      <h1>Привет! Я Тимур</h1>
+      <p>Ученик 9 <b>математико-информатического</b> класса. Помогаю детям с 4 по 8 класс не просто разобраться в математике — а начать <b>верить в себя</b>, получать <b>уверенные оценки</b> и <b>развивать логическое мышление</b>, которое понадобится всю жизнь.</p>
     </div>
   </section>
 
   <section class="block-light">
     <div class="container">
-      <h2>Обо мне</h2>
+      <h2>Почему мне доверяют родители?</h2>
       <ul>
-        <li>Я сам недавно учился по этим темам и знаю, какие бывают сложности.</li>
-        <li>Поясняю материал понятно, спокойно и в дружеской атмосфере.</li>
-        <li>У меня есть опыт подготовки к контрольным и олимпиадам.</li>
+        <li>Я сам недавно проходил эти темы, знаю, что именно вызывает трудности, и объясняю так, чтобы стало понятно с первого раза.</li><br>
+        <li>Готовлю к контрольным, разбираю домашние задания, объясняю сложные темы <b>на понятном языке</b>.</li><br>
+        <li>Занятия проходят в <b>дружелюбной, мотивирующей атмосфере</b>. Использую яркие презентации, мемы и интересные задачи, чтобы вовлечь ребёнка.</li><br>
+        <li>Работаю по проверенным методикам — например, по учебнику <b>Людмилы Петерсон</b>, но легко адаптируюсь под любой другой.</li><br>
+        <li><b>Важно:</b> я не просто объясняю математику — я помогаю вашему ребёнку <b>поверить в себя</b> и начать учиться с интересом.</li>
       </ul>
     </div>
   </section>
 
   <section class="block-gray">
     <div class="container">
-      <h2>Что я предлагаю</h2>
+      <h2>Вы не просто оплачиваете репетитора — вы инвестируете в будущее</h2>
       <ul>
-        <li><strong>Математика 4–7 классов:</strong> объяснение тем, подготовка к контрольным, помощь с домашкой.</li>
-        <li><strong>Формат занятий:</strong> онлайн через Zoom / Discord / Telegram.</li>
-        <li><strong>Первое занятие бесплатно</strong> — чтобы познакомиться и понять, как комфортно работать.</li>
+        <li><strong>Математика для 4–8 классов:</strong> объяснение тем, помощь с домашней работой, подготовка к контрольным.</li>
+        <li><strong>Формат:</strong> онлайн-занятия (Zoom / Telegram / Яндекс Телемост).</li>
+        <li><strong>Гибкая оплата:</strong> стоимость подбираем так, чтобы вам было комфортно инвестировать в образование ребёнка.</li>
       </ul>
+      <p style="margin-top: 20px;">
+        🧠 Каждое занятие — шаг к уверенному будущему. Ведь математика развивает логику, уверенность и способность решать жизненные задачи.
+      </p>
     </div>
   </section>
 
-  <section class="block-light">
+  <section class="intro">
     <div class="container">
-      <h2>Отзывы</h2>
-      <div class="reviews">
+      <h2 style="color: white;">Что говорят родители и ученики</h2>
+      <div class="reviews" style="color: #333;">
         <div class="review">
           <strong>Анна, мама ученика 5 класса:</strong>
-          Макс — просто находка! Сыну стало проще понимать математику, появилась уверенность. Спасибо!
+          Тимур — просто находка! Сыну стало проще понимать математику, появилась уверенность. Спасибо!
         </div>
         <div class="review">
           <strong>Мария, мама ученицы 7 класса:</strong>
-          Дочь с радостью занимается с Максом. Уроки проходят интересно и результативно.
+          Дочь с радостью занимается с Тимуром. Уроки проходят интересно и результативно.
         </div>
         <div class="review">
           <strong>Илья, 6 класс:</strong>
-          Теперь я не боюсь задач по математике. Макс объясняет очень понятно и даже весело!
+          Теперь я не боюсь задач по математике. Уроки наполнены мемами и понятными объяснениями — занятия не проходят скучно!
         </div>
       </div>
     </div>
@@ -176,9 +180,9 @@
   <section class="block-contact">
     <div class="container">
       <div class="cta">
-        <h2>Связаться со мной</h2>
-        <p>Если хотите задать вопрос или записаться на занятие, напишите мне в Telegram:</p>
-        <a href="https://t.me/your_username" target="_blank">@your_username</a>
+        <h2>Хотите, чтобы ваш ребёнок не боялся математики?</h2>
+        <p>Напишите мне в Telegram — обсудим все детали:</p>
+        <a href="https://t.me/Gizatullin_T1mur" target="_blank">@Gizatullin_T1mur</a>
       </div>
     </div>
   </section>
